--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 
 <!--resource-->
 <link rel="stylesheet" type="text/css" href="./css/common.css">
-<link rel="stylesheet" type="text/css" href="./css/style.css">
+<link rel="stylesheet" type="text/css" href="./css/login.css">
 
 </head>
 <body> 
